nouveau fichier : .env 	modifié :         Gemfile 	modifié :         Gemfile.lock 	nouveau fichier : app/assets/javascripts/users.coffee 	modifié :         app/assets/stylesheets/annonces.scss 	nouveau fichier : app/assets/stylesheets/users.scss 	modifié :         app/controllers/application_controller.rb 	nouveau fichier : app/controllers/users_controller.rb 	nouveau fichier : app/helpers/users_helper.rb 	nouveau fichier : app/mailers/application_mailer.rb 	nouveau fichier : app/mailers/user_mailer.rb 	nouveau fichier : app/models/admin.rb 	modifié :         app/models/annonce.rb 	modifié :         app/models/user.rb 	modifié :         app/views/annonces/_form.html.erb 	modifié :         app/views/annonces/edit.html.erb 	modifié :         app/views/annonces/index.html.haml 	modifié :         app/views/annonces/new.html.erb 	supprimé :        app/views/annonces/show.html.erb 	nouveau fichier : app/views/annonces/show.html.haml 	supprimé :        app/views/devise/registrations/edit.html.erb 	nouveau fichier : app/views/devise/registrations/edit.html.haml 	modifié :         app/views/layouts/application.html.erb 	nouveau fichier : app/views/layouts/mailer.html.erb 	nouveau fichier : app/views/layouts/mailer.text.erb 	nouveau fichier : app/views/user_mailer/welcome_email.html.erb 	nouveau fichier : app/views/user_mailer/welcome_email.text.erb 	nouveau fichier : app/views/users/index.html.haml 	modifié :         app/views/welcome/index.html.erb 	modifié :         config/environments/development.rb 	modifié :         config/environments/production.rb 	modifié :         config/initializers/devise.rb 	modifié :         config/routes.rb 	nouveau fichier : db/migrate/20150525174339_devise_create_admins.rb 	nouveau fichier : db/migrate/20150525175205_drop_admin_to_users.rb 	nouveau fichier : db/migrate/20150525175720_add_admin_to_users.rb 	modifié :         db/schema.rb 	nouveau fichier : test/controllers/users_controller_test.rb 	nouveau fichier : test/fixtures/admins.yml 	n

--- a/app/views/annonces/_form.html.erb
+++ b/app/views/annonces/_form.html.erb
@@ -12,21 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
+    <%= f.label :titre %><br>
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :body %><br>
+    <%= f.label :corps %><br>
     <%= f.text_area :body %>
   </div>
   <div class="field">
-    <%= f.label :price %><br>
+    <%= f.label :prix %><br>
     <%= f.number_field :price %>
   </div>
-  <div class="field">
-    <%= f.label :id_user %><br>
-    <%= f.number_field :id_user %>
-  </div>
+     <%= f.hidden_field :id_user, :value => current_user.id %>
   <div class="actions">
     <%= f.submit %>
   </div>
