--- a/app/views/annonces/edit.html.erb
+++ b/app/views/annonces/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Annonce</h1>
+<h1>Editer l'annonce</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @annonce %> |
-<%= link_to 'Back', annonces_path %>
+<%= link_to 'Regardons à nouveau votre annonce', @annonce %> |
+<%= link_to 'Retournons voir les autres annonces', annonces_path %>
