--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,18 +1,5 @@
-</br>
-<p class="navbar-text pull-right">
-<% if user_signed_in? %>
-  Logged in as <strong><%= current_user.email %></strong>.
-  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-<% else %>
-  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-<% end %>
-</p>
-</br>
-
 <section class="container content-section text-center">
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Bienvenue à la Caverne de l'ENSIIE</h1>
+<p>Comme pour la caverne d'Alibaba, la caverne de l'ENSIIE regorge de trésors. Alors peut-être qu'il n'y a pas les quarantes voleurs (sûrement car il n'y a pas assez d'étrangers), mais l'histoire se répètera et vous trouverez fortune à l'intérieur de la Caverne.</p>
 </section>
 
